// Sends notifications to the customer
public class NotificationService {
    // Sends confirmation message after order is completed
    public void sendConfirmation(String customer) {
        System.out.println("Sending order confirmation to " + customer + "...");
    }
}
