// Handles product-related operations
public class ProductService {
    // Checks if a product is available in stock
    public boolean checkAvailability(String product) {
        System.out.println("Checking availability for " + product + "...");
        return true; // Assume product is always available for demo
    }
}
