// Handles delivery of products
public class ShippingService {
    // Ships the product to the given address
    public void shipProduct(String product, String address) {
        System.out.println("Shipping " + product + " to " + address + "...");
    }
}
